# wasm-exps

./: .gitignore  Cargo.toml  README.md  fib.sol  fib.wasm  fib.wat
fibonacci/program/: Cargo.toml
fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
fibonacci/program/src/: main.rs
fibonacci/script/: Cargo.toml
fibonacci/script/src/: main.rs
revm/program/: Cargo.toml
revm/program/elf/: riscv32im-succinct-zkvm-elf
revm/program/src/: main.rs  prover_types.rs
revm/script/: Cargo.toml
wain-fibonacci/program/: Cargo.toml
wain-fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
wain-fibonacci/program/src/: main.rs
wain-fibonacci/script/: Cargo.toml
wain-fibonacci/script/src/: main.rs
wasmi-fibonacci/program/: Cargo.toml
wasmi-fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
wasmi-fibonacci/program/src/: main.rs
wasmi-fibonacci/script/: Cargo.toml
