[workspace]
[package]
name = "revm-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
# Sp1
sp1-zkvm = { path = "../../../sp1/crates/zkvm/entrypoint" }
sp1-derive = "1.1.0"


# EVM
revm-interpreter = "9.0.0"
revm = { version = "13.0.0", features = ["serde"], default-features = false }
# alloy-sol-types.workspace = true


# Misc
hex = "0.4.3"

# alloy-sol-types = "0.2.1"
# alloy-contract = "0.2.1"
